--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
 		
 		Instruções para manipular os arquivos. 
 
-		2. Customize o conteúdo do arquivo index.html de acordo com as suas necessidades.
-		3. Altere a foto, o favicon e o título do site.
 		4. O arquivo bootstrap possui variados temas de cores, escolha o que mais lhe agradar. (Olhar a pasta assets/css.)
-		5. Linkedin e GitHub são apenas exemplos de redes sociais, sinta-se livre para adicionar outras redes sociais.
 		6. Adicione um link para o seu currículo em PDF. (Dica: Utilize o Google Drive para hospedar o arquivo PDF e compartilhar o link.)
 		7. Para as barras de afinidades com as tecnologias, você pode alterar o nome da tecnologia e a porcentagem de afinidade. Procure pela classe "progress-bar" e altere o valor de width. (Dica: A porcentagem é um valor entre 0 e 100.)
-		8. Salve o arquivo e abra o arquivo index.html no seu navegador para visualizar o site.
-		9. Subir no GitHub. 
 		10. Publicar utilizando o GitHub Pages. (Tutorial: https://www.alura.com.br/artigos/como-colocar-projeto-no-ar-com-github-pages/)
 		11. Compartilhar o link do seu site com a professora Adriana através da Planilha. 
 		12. Parabéns! Você concluiu o desafio.
@@ -32,15 +27,16 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- Google Font -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 
 	<!-- FontAwesome JS-->
 	<script defer src="assets/fontawesome/js/all.min.js"></script>
 
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/bootstrap-6.css">
+
+	<!--CSS-->
+	<link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -411,7 +407,8 @@
 											class="resume-lang-name font-weight-bold">Inglês</span> <small
 											class="text-muted font-weight-normal">(Profissional)</small></li>
 									<li><span class="resume-lang-name font-weight-bold">Espanhol</span> <small
-											class="text-muted font-weight-normal">(Em construção)</small></li>
+											class="text-muted font-weight-normal">(Em construção)</small>
+									</li>
 								</ul>
 							</div>
 						</section>
