--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 											</div>
 										</div>
 										<div class="resume-timeline-item-desc">
-											<p>Como Scrum Master, espero promover uma cultura de transparência, colaboração, responsabilidade e melhoria contínua dentro de equipes e na organização como um todo. Além disso, pretendo criar um ambiente de trabalho onde a inovação, a ética e a adaptação são valorizadas.</p>
+											<p>Com um conhecimento técnico bem desenvolvido e explorado, desejo atuar na liderança de equipes. Como Scrum Master, espero promover uma cultura de transparência, colaboração, responsabilidade e melhoria contínua dentro de equipes e na organização como um todo. Além disso, pretendo criar um ambiente de trabalho onde a inovação, a ética e a adaptação são valorizadas.</p>
 											<h4 class="resume-timeline-item-desc-heading font-weight-bold">
 												Soft Skills exigidas para essa carreira:
 											</h4>
